# thermal-print-service

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SCHEMA_CHANGELOG.md  thermal-print-service-spec.md
.github/: actionlint.yaml
deploy/: install.sh  io-stall-watchdog.service  io-stall-watchdog.sh  journald-size.conf  (+5 more)
design/: SKILL.md  pyproject.toml
design/tests/: conftest.py  manual-smoke.md  test_cli_compile.py  test_cli_info.py  test_cli_init.py  test_cli_lint.py  test_cli_preview.py  test_cli_print.py  test_cli_print_url.py  test_cli_send.py  test_cli_status.py  test_client.py  test_compile.py  test_defaults.py  test_fonts.py  test_lint_framework.py  test_lint_post.py  test_lint_pre.py  test_lint_runner.py  test_pi_info.py  test_render.py  test_trim.py
design/tests/fixtures/html/: simple.html
design/tprint_design/: __init__.py  cli.py  client.py  compile.py  guidelines.md  lint.py  lint_post.py  lint_pre.py  pi_info.py  render.py
design/tprint_design/defaults/: __init__.py  thermal_reset.css
design/tprint_design/templates/: __init__.py  banner.html  blank.html  literary.html  note.html  scroll.html
hub/: .dockerignore  Dockerfile  README.md  constraints.txt  pyproject.toml  railway.json
hub/hub/: __init__.py  app.py  auth.py  capabilities.py  cli.py  config.py  db.py  friends.py  history.py  ids.py  invites.py  login.py  middleware.py  models.py  presence.py  schemas.py  send.py  web_auth.py
hub/hub/jobs/: lease.py  store.py  wakeup.py
hub/hub/routes/: __init__.py  admin.py  capabilities.py  console_login.py  friends.py  health.py  inbox.py  login_link.py  register.py  send.py  web.py
hub/hub/static/: app.css
hub/hub/templates/: base.html  compose.html  friends.html  friends_list.html  history.html  invite_code.html  join.html  login_landing.html  send_results.html
hub/tests/: conftest.py  test_auth.py  test_body_limit.py  test_capabilities.py  test_config.py  test_db_url.py  test_friend_schema.py  test_friends.py  test_health_wiring.py  test_history.py  test_ids.py  test_inbox.py  test_invite_register.py  test_invites_fk_ordering.py  test_jobs_lease.py  test_login.py  test_login_link_endpoint.py  test_presence.py  test_routes_helpers.py  test_send.py  test_status.py  test_web_auth.py  test_web_compose.py  test_web_design_hallmark.py  test_web_friends.py  test_web_history.py  test_web_join.py
mcp-server/: README.md  SKILL.md  pyproject.toml
mcp-server/printer_mcp/: __init__.py  __main__.py  client.py  config.py  design_guidelines.py  errors.py  hub_client.py  schema_cache.py  server.py
mcp-server/tests/: conftest.py  test_client.py  test_config.py  test_design_guidelines.py  test_hub_client.py  test_schema_cache.py  test_server_tools.py
printer-core/: pyproject.toml
printer-core/printer_core/: __init__.py  constants.py  dither.py  ink.py
printer-core/tests/: conftest.py  test_constants.py  test_dither.py  test_ink.py
service/: pyproject.toml
service/printer/: __init__.py  app.py  calibration.py  config.py  constants.py  health.py  paths.py
service/printer/cli/: main.py
service/printer/queue/: cache.py  idempotency.py  joblog.py  worker.py
service/printer/relay/: __init__.py  commands.py  config.py  from_tag.py  hub_client.py  local_client.py  loop.py  paths.py  ratelimit.py  store.py  sync.py
service/printer/render/: dither.py  errors.py  renderer.py  typography.py
service/printer/render/blocks/: __init__.py  embedded.py  flow.py  lists.py  literary.py  text.py  visual.py
service/printer/schema/: blocks.py  document.py  errors.py
service/printer/transport/: __init__.py  escpos_file.py  runtime.py  status.py
service/tests/: conftest.py  test_app_cut_chunks.py  test_app_dry_run.py  test_app_healthz.py  test_app_jobs.py  test_app_metrics.py  test_app_print.py  test_app_print_raw.py  test_app_render_input_errors.py  test_app_reprint_queue_full.py  test_app_schema.py  test_app_test.py  test_calibration.py  test_cli.py  test_config.py  test_constants.py  test_deploy_scripts.py  test_health.py  test_printer_core_parity.py  test_queue_cache.py  test_queue_idempotency.py  test_queue_joblog.py  test_queue_worker.py  test_queue_worker_chunks.py  test_queue_worker_clock.py  test_render_blocks_embedded.py  test_render_blocks_flow.py  test_render_blocks_lists.py  test_render_blocks_literary.py  test_render_blocks_text.py  test_render_blocks_visual.py  test_render_chunks.py  test_render_dither.py  test_render_document_pipeline.py  test_render_typography.py  test_render_typography_cjk.py  test_schema_align_allowlist.py  test_schema_blocks_embedded.py  test_schema_blocks_flow.py  test_schema_blocks_lists.py  (+9 more)
service/tests/relay/: conftest.py  mock_hub.py  test_allowlist_sync.py  test_clients.py  test_commands.py  test_friend_sync_wiring.py  test_from_tag.py  test_loop_background_watch.py  test_loop_gates.py  test_loop_non202.py  test_loop_submit.py  test_paths_store.py  test_ratelimit.py  test_reconnect.py  test_replay.py
(+4 files in other folders)
