[project]
name = "printer-core"
version = "0.1.0"
description = "Shared primitives (dither, constants) for the thermal print stack"
requires-python = ">=3.11"
dependencies = [
  "Pillow>=11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.7",
  "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["printer_core*"]

[tool.setuptools.package-data]
printer_core = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
