[project]
name = "thermal-print-service"
version = "0.1.0"
description = "Tailnet-attached thermal receipt print service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "python-escpos>=3.1",
  "Pillow>=11.0",
  "qrcode[pil]>=8.0",
  "python-barcode>=0.15",
  "fonttools>=4.50",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "asgi-lifespan>=2.1",
  "ruff>=0.7",
  "mypy>=1.13",
]

[project.scripts]
printer-svc = "printer.cli.main:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["printer*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use `pytest.raises(Exception)` to verify pydantic
# rejects bad input, since pydantic raises ValidationError but the tests
# don't depend on the specific exception subclass.
"tests/*" = ["B017"]
